--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-image: url('/bg.png'); /* Ensure the correct path to the background image */
+      background-image: url('/bg.png'); 
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
